<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4B00897B"
    android:onClick="Siguiente"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="339dp"
        android:layout_height="46dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/Nombre"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtTelefono"
        android:layout_width="326dp"
        android:layout_height="47dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/Telefono"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonFecha" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="321dp"
        android:layout_height="53dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/txtEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTelefono" />

    <EditText
        android:id="@+id/txtDescripcion"
        android:layout_width="338dp"
        android:layout_height="47dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/Descripcion"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="84dp"
        android:backgroundTint="#8543A047"
        android:onClick="Siguiente"
        android:text="@string/Siguente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescripcion" />

    <Button
        android:id="@+id/botonFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#A600ACC1"
        android:text="Fecha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

    <EditText
        android:id="@+id/txtFecha"
        android:layout_width="236dp"
        android:layout_height="45dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/botonFecha"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre" />
</androidx.constraintlayout.widget.ConstraintLayout>